# scons517

./: .gitignore  .pre-commit-config.yaml  README.md  minicons.py  miniconstruct.py  pyproject.toml  sconstruct.py
scons517/: __init__.py  api.py  extension.py  pytar.py  sphinx.py  wheel.py
tests/: run_tests.py
tests/examples/: cython.pyx  cythonmod.pyx  extension.c
tests/examples/c-extension/: pyproject.toml  sconstruct.py
tests/examples/cython/: pyproject.toml  sconstruct.py
tests/examples/pure-python/: module.py  pyproject.toml  sconstruct.py
