[build-system]
build-backend = "scons517.api"
requires = [
    "Scons==4.4.0",
    "packaging",
    "toml",
]
backend-path = ["."]

[project]
name = "scons517"
version = "0.0.1"
dependencies = [
    "SCons==4.4.0",
    "packaging",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "sphinx",
    "furo",
    "types-toml",
]

[tool.balck]
target-version = ['py38']
line-length = 90

[tool.flake8]
max_line_length = 90
select = "E,F,W,B,B950,I25"
ban-relative-imports = true
extend-ignore = "E203,E266,E501,B007"
per-file-ignores = "sconstruct.py:F821"

[tool.isort]
profile = "black"
atomic = true